adds databse connectivity with search, add, update and delete
