# src/handlers/collection/{id}.js
@@ -1,7 +1,7 @@
 'use strict';
 
 function handler(req, res, next){
-
+    res.send("collection id reached");
 }
 
 module.exports = {get: handler};
